--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
+    </script>
     <title>Document</title>
 </head>
+
 <body>
-    <form action="/api/products" method="post">
-        <label for="name">Name</label>
-        <br>
-        <input type="text" name="name" id="name">
-        <br>
+    <div class="container d-flex  justify-content-center mt-5 ">
 
-        <label for="description">description</label>
-        <br>
-        <input type="text" name="description" id="description">
-        <br>
+        <form action="/api/products" method="post" class="">
+            <div class="mb-3">
+                <label for="title" class="form-label">Title</label>
+                <input type="text" name="title" id="title" class="form-control">
+            </div>
 
-        <label for="price">price</label>
-        <br>
-        <input type="number" name="price" id="price">
-        <br>
+            <div class="mb-3">
+                <label for="price">Price</label>
+                <input type="number" name="price" id="price" class="form-control">
+            </div>
 
-        <label for="image">image Url</label>
-        <br>
-        <input type="text" name="image" id="image">
-        
-        <input type="submit" value="Crear producto" class="submit-button"></div>
+            <div class="mb-3">
+                <label for="thumbnail">Thumbnail</label>
+                <input type="text" name="thumbnail" id="thumbnail" class="form-control">
+            </div>
+
+
+            <input type="submit" value="Crear producto" class="submit-button mt-4">
+    </div>
     </form>
+    </div>
 
 </body>
+
 </html>
