no anda el form

--- a/public/index.html
+++ b/public/index.html
@@ -21,19 +21,19 @@
                 <input type="text" name="title" id="title" class="form-control shadow-sm">
             </div>
             <div class="mb-3 text-center">
-                <label for="price">Price</label>
+                <label for="price" class="form-label">Price</label>
                 <input type="number" name="price" id="price" class="form-control shadow-sm">
             </div>
             <div class="mb-3 text-center">
-                <label for="thumbnail">Thumbnail</label>
+                <label for="thumbnail" class="form-label">Thumbnail</label>
                 <input type="text" name="thumbnail" id="thumbnail" class="form-control shadow-sm">
             </div>
              <div class="mb-3 text-center">
-                <label for="description">Description</label>
+                <label for="description" class="form-label">Description</label>
                 <input type="text" name="description" id="description" class="form-control shadow-sm">
             </div>
             <div class="mb-3 text-center">
-                <label for="stock">Stock</label>
+                <label for="stock" class="form-label">Stock</label>
                 <input type="number" name="stock" id="stock" class="form-control shadow-sm">
             </div>
             <div class="d-flex  justify-content-center">
